feat: add css color variables

--- a/style.scss
+++ b/style.scss
@@ -1,3 +1,22 @@
+:root {
+    // === colors ===
+    --color-white: #ffffff;
+    --color-black: #000000;
+    --color-navy-950: #0e1323;
+    --color-navy-900: #1c204b;
+    --color-navy-800: #33397a;
+    --color-orange-300: #ff8b64;
+    --color-purple-700: #7335d2;
+    --color-purple-600: #5747ea;
+    --color-purple-500: #7078c9;
+    --color-blue-300: #55c2e6;
+    --color-pink-400: #ff5e7d;
+    --color-green-400: #4bcf82;
+    --color-yellow-900: #f1c75b;
+    --color-grey-200: #d8d8d8;
+}
+
+
 * {
     padding: 0;
     margin: 0;
