--- a/style.scss
+++ b/style.scss
@@ -14,6 +14,14 @@
     --color-green-400: #4bcf82;
     --color-yellow-900: #f1c75b;
     --color-grey-200: #d8d8d8;
+
+    // === spacing ===
+    --spacing-0: 0px;
+    --spacing-100: 0.5rem; // 8px
+    --spacing-200: 1.0rem; // 16px
+    --spacing-300: 1.5rem; // 24px
+    --spacing-400: 2.0rem; // 32px
+    --spacing-500: 2.5rem; // 40px
 }
 
 
