--- a/style.scss
+++ b/style.scss
@@ -7,6 +7,7 @@
     --color-navy-950: #0e1323;
     --color-navy-900: #1c204b;
     --color-navy-800: #33397a;
+    --color-navy-200: #bbc0ff;
     --color-orange-300: #ff8b64;
     --color-purple-700: #7335d2;
     --color-purple-600: #5747ea;
@@ -32,4 +33,70 @@
     margin: 0;
     box-sizing: border-box;
     font-family: "Rubik", Arial, Helvetica, sans-serif;
+}
+
+
+main {
+    background-color: var(--color-navy-950);
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+
+.dashboard {
+
+    &__user-panel {
+        background-color: var(--color-navy-900);
+        border-radius: 0.9375rem; // 15px
+    }
+
+    &__user {
+        background-color: var(--color-purple-600);
+        border-radius: 0.9375rem;
+        padding: var(--spacing-400);
+        display: flex;
+        align-items: center;
+        gap: var(--spacing-300);
+    }
+
+    &__user-img {
+        width: 4.0rem;
+        aspect-ratio: 1 / 1;
+        border: 3px solid var(--color-white);
+        border-radius: 100%;
+    }
+
+    &__user-label {
+        margin-bottom: var(--spacing-100);
+        color: var(--color-navy-200);
+        @include fonts.apply-text-preset("6");
+    }
+
+    &__user-name {
+        color: var(--color-white);
+        @include fonts.apply-text-preset("4");
+    }
+
+    &__menu {
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+    }
+
+    &__menu-button {
+        flex-basis: 33.3%;
+        flex-grow: 1;
+        background-color: transparent;
+        border: transparent;
+        padding: var(--spacing-300) 0;
+        cursor: pointer;
+        color: var(--color-purple-500);
+        @include fonts.apply-text-preset("5");
+
+        &[aria-selected="true"] {
+            color: var(--color-white);
+        }
+    }
 }
